--- a/template/index.html
+++ b/template/index.html
@@ -86,30 +86,37 @@
         </div>
             
         <div class="d-flex justify-content-evenly" >
+
             <div class="form-check form-switch">
                 <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckDefault" nome="blue">
                 <label class="form-check-label" for="flexSwitchCheckDefault">Bluetooth</label>
             </div> 
+
             <div class="form-check form-switch">
                 <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckDefault" nome="dual_sim">
                 <label class="form-check-label" for="flexSwitchCheckDefault">Dual SIM</label>
             </div>
+
             <div class="form-check form-switch">
                 <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckDefault" nome="three_g">
                 <label class="form-check-label" for="flexSwitchCheckDefault">3G</label>
             </div>
+
             <div class="form-check form-switch">
                 <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckDefault" nome="four_g">
                 <label class="form-check-label" for="flexSwitchCheckDefault">4G</label>
             </div>
+
             <div class="form-check form-switch">
                 <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckDefault" nome="touch_screen">
                 <label class="form-check-label" for="flexSwitchCheckDefault">Pantalla tactil</label>
             </div>
+
             <div class="form-check form-switch">
                 <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckDefault" nome="wifi">
                 <label class="form-check-label" for="flexSwitchCheckDefault">Wifi</label>
-            </div>             
+            </div>        
+
         </div>
         
         <div class="d-flex justify-content-center">
@@ -118,11 +125,22 @@
         </div>
 
         {% if price|length > 0 %}
-            {% if price == "True" %}
-                <h4 style="background-color: green;"> Según los datos, este pasajero sobrevive</h4>
-            {% else %}
-                <h4 style="background-color: red;" > Según los datos, este pasajero no sobrevive</h5>
+            {% if price == "[0.]" %}
+                <h4 style="background-color: rgb(128, 0, 0);"> Gama baja</h4>
             {% endif %}
+
+            {% if price == "[1.]" %}
+                <h4 style="background-color: rgb(128, 98, 0);"> Gama Media Baja</h4>
+            {% endif %}
+
+            {% if price == "[2.]" %}
+                <h4 style="background-color: rgb(0, 34, 128);"> Gama Media </h4>
+            {% endif %}
+
+            {% if price == "[3.]" %}
+                <h4 style="background-color: rgb(21, 128, 0);"> Gama Alta </h4>
+            {% endif %}
+                
         {% endif %}
     </form>
 
